# SR_Qml

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
qml/: Colors.qml  SRColors.qml  SR_About.qml  SR_Menu.qml  SR_MenuBar.qml
